whoami/whoami-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
  namespace: apps
spec:
  selector:
    app: whoami
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
